...
          />
        )}
      </View>

      <View style={[styles.navWrapper, { paddingBottom: insets.bottom }]}>
        <NavButton
          label="Home"
          source={require('../../assets/images/homescreen.png')}
          active={activeTab === 'home'}
          onPress={handleNavigateHome}
        />
        <NavButton
          label="Game"
...
