...
              onPress={onConfirm}
              disabled={loading}
            >
              {loading ? (
                <ThemedLoader mode="inline" color="#fff" size="small" />
              ) : (
                <Text style={styles.confirmButtonText}>Continue</Text>
              )}
            </TouchableOpacity>
          </View>
        </View>
      </View>
    </Modal>
...
